# dj-lodging

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
docker/: Dockerfile  (+2 more)
src/: .pylintrc  pyproject.toml
src/.ebextensions/: django.config
src/djbooking/api/: router.py
src/djbooking/api/users/: serializers.py  urls.py  views.py
src/djbooking/application_services/: email.py  users.py
src/djbooking/django_app/: backends.py  base_models.py  manage.py
src/djbooking/django_app/django_app/: asgi.py  settings.py  urls.py  wsgi.py
src/djbooking/django_app/django_core/: asgi.py  settings.py  urls.py  wsgi.py
src/djbooking/domain/users/: admin.py  apps.py  models.py  repository.py
src/djlodging/api/: exception_handlers.py  exceptions.py  helpers.py  pagination.py  permissions.py  router.py
src/djlodging/api/bookings/: serializers.py  views.py
src/djlodging/api/lodging/: __init__.py  serializers.py  views.py
src/djlodging/api/payments/: serializers.py  views.py
src/djlodging/api/users/: serializers.py  urls.py  views.py
src/djlodging/application_services/: bookings.py  email.py  exceptions.py  helpers.py  lodgings.py  payments.py  users.py
src/djlodging/django_app/: manage.py
src/djlodging/django_app/django_core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/djlodging/domain/bookings/: admin.py  apps.py  filters.py  models.py  repository.py  services.py  sorting.py
src/djlodging/domain/core/: base_exceptions.py  base_filters.py  base_models.py
src/djlodging/domain/lodgings/: admin.py  apps.py  repositories.py  repository.py
src/djlodging/domain/users/: admin.py  apps.py  constants.py  exceptions.py  models.py  repository.py
src/quality_config/: .flake8
src/tests/: conftest.py
src/tests/api/: test_lodging_views.py  test_user_views.py
src/tests/application_services/: test_bookings.py  test_lodgings.py  test_user.py
src/tests/infrastructure/: test_payment_provider.py  test_provider_injector.py
src/tests/pytest_fixtures/: __init__.py  api_client.py  lodgings.py  user.py
(+79 files in other folders)
