[tool.poetry]
name = "djbooking"
version = "0.1.0"
description = "Django backend for the lodging reservation application"
authors = ["Kostiantyn Perun <kosperun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0"
django-environ = "^0.8.1"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.0.0"
drf-spectacular = "^0.23.1"
pre-commit = "^2.17.0"
Pillow = "^9.0.0"
psycopg2-binary = "^2.9.3"
ipython = "^8.4.0"
django-health-check = "^3.16.5"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pylint-django = "^2.5.3"
django-silk = "^5.0.1"

[tool.poetry.scripts]
manage = 'djbooking.django_app.manage:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
